--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Coffee of Angels",
-  "short_name": "Angel Coffee",
+  "short_name": "Coffee of Angels",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
